fix margin under h3 on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1505,7 +1505,7 @@ main {
       margin-top: 1.75rem;
       padding: 0;
     } // headings encouragement
-    h3 { margin-bottom: 0.125rem;}
+    h3 { margin-bottom: 0.5rem;}
     h3.encouragement-subtitle { margin-bottom: 0.75rem; }
     .accordion-trigger,
     .accordion-collapse { margin-top: .5rem; }
